# ninaflowers

./: README.md  docker-compose.yml  update.sh
nina/: Dockerfile  next.config.ts  package-lock.json  package.json
nina-flowers/: package-lock.json  package.json
nina-flowers/src/app/: page.tsx
nina/public/: robots.txt  telegram.svgZone.Identifier  whatsapp.svgZone.Identifier  yandex_622f583bfd5e03c9.html
nina/src/app/: MainPage.module.css  layout.tsx  page.tsx
nina/src/app/all-works/: page.tsx
nina/src/app/api/bouquets/: route.ts
nina/src/app/api/bouquets/[id]/: route.tsx
nina/src/app/components/: AnimatedBackground.tsx  AnimatedHeadline.tsx  MagicPetals.tsx  ProductCategories.tsx  utils.tsx
nina/src/app/order/[bouquetId]/: page.tsx
nina/src/app/privacy/: page.tsx
telegram_bot/: pyproject.toml
telegram_bot/Dockerfiles/Postgres/: Dockerfile
telegram_bot/src/: __main__.py  config.py  crud.py  db.py  models.py
